hphp/hack/test/typecheck/reactive/mayberx2.php.exp
File "mayberx2.php", line 5, characters 3-18:
`<<__AtMostRxAsFunc>>` attribute can only be put on parameters of conditionally reactive functions or methods annotated with `<<__AtMostRxAsArgs>>` attribute. (NastCheck[3063])
File "mayberx2.php", line 5, characters 3-18:
The `__AtMostRxAsFunc` attribute cannot be used on a function. (Typing[4231])
